--- a/package.json
+++ b/package.json
@@ -6,12 +6,26 @@
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
+    "axios": "^0.21.1",
+    "formik": "^2.2.9",
+    "json-server": "^0.16.3",
+    "json-server-auth": "^2.0.2",
+    "node-sass": "^6.0.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-google-login": "^5.2.2",
+    "react-redux": "^7.2.4",
+    "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
+    "redux": "^4.1.0",
+    "redux-devtools-extension": "^2.13.9",
+    "redux-react-session": "^2.6.1",
+    "redux-thunk": "^2.3.0",
+    "sass": "^1.35.0",
     "web-vitals": "^1.1.2"
   },
   "scripts": {
+    "json:server": "json-server --watch db.json",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
